# avilib

./: CMakeLists.txt  LICENSE  Makefile  README.md  avidef.h  avilib.cpp  avilib.h  common.h  main.cpp  reader.cpp  reader.h  writer.cpp  writer.h
