cmake_minimum_required (VERSION 2.8.0)
project (avilib)
add_compile_options(-std=c++11)
add_library (avi avilib.cpp reader.cpp writer.cpp)
install(TARGETS avi DESTINATION lib)
install(FILES avilib.h DESTINATION include)
add_compile_options(-std=c++11)
add_executable (avilib_test main.cpp)
target_link_libraries(avilib_test avi)
